# Agentic-MCP-Interviewer

./: PROJECT_DOCUMENTATION.md  README.md
backend/: api.py  pyproject.toml  report.md  requirements.txt
backend/src/projecttest/: analysis_crew.py  challenge_crew.py  crew_old.py  crew_validation.py  evaluation_crew.py  grading_crew.py  main.py  question_crew.py
backend/src/projecttest/config/: agents.yaml  analysis_tasks.yaml  grading_tasks.yaml  question_tasks.yaml  tasks.yaml
backend/src/projecttest/models/: cv_analysis.py
backend/src/projecttest/tools/: code_runner.py  run_code_tool.py
backend/src/projecttest/utils/: chart_generator.py  file_reader.py  pdf_report.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: CodingChallenge.tsx  Questions.tsx  TechSelector.tsx  UploadCV.tsx
frontend/src/services/: api.ts
frontend/src/types/: candidate.ts
mcp_server/: requirements.txt  server.py
