[project]
name = "projecttest"
version = "0.1.0"
description = "projectTest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "fastapi>=0.129.0",
    "matplotlib>=3.10.8",
    "mcp>=1.23.3",
    "pypdf>=6.7.0",
    "reportlab>=4.4.10",
    "uvicorn>=0.40.0",
]

[project.scripts]
projecttest = "projecttest.main:run"
run_crew = "projecttest.main:run"
train = "projecttest.main:train"
replay = "projecttest.main:replay"
test = "projecttest.main:test"
run_with_trigger = "projecttest.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
